# chat-api

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  dev.Dockerfile  mypy.ini  prod.Dockerfile  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: build.yml  ci.yml  makefile.yml  test.yml
app/application/api/: main.py  schemas.py  static_docs.py
app/application/api/health/: handlers.py
app/application/api/messages/: handlers.py  schemas.py
app/application/api/v1/health/: handlers.py  schemas.py
app/application/api/v1/messages/: handlers.py  schemas.py
app/domain/entities/: base.py  messages.py
app/domain/exceptions/: messages.py
app/domain/values/: base.py  messages.py
app/events/: base.py  messages.py
app/infra/repositories/: base.py  convertors.py  memory.py  mongo.py  mongo_base.py
app/infra/repositories/chats/: base.py  convertors.py  memory.py  mongo.py
app/infra/repositories/messages/: base.py  convertors.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_messages.py
app/tests/values/: test_messages.py
app/utils/: uuid.py
config/: nginx.conf
docker_compose/: app.yaml  loggers.yaml  server.yaml  storages.yaml  storages_ui.yaml
