[tool.poetry]
name = "ddd-fastapi"
version = "0.1.0"
description = ""
authors = ["bashar <basharhasan74@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.112.0" }
motor = "^3.5.1"
uvicorn = { extras = ["all"], version = "^0.30.6" }
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
faker = "^28.0.0"
punq = "^0.7.0"
httpx = "^0.27.2"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.uv.pip]
system = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2
src_paths = ["app", ]
skip_glob = [
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    ".github",
]
known_fastapi = ["fastapi"]
known_first_party = ["application", "domain", "events", "infra", "logic", "utils", "tests"]
sections = [
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]