[project]
authors = [
    { name = "Bashar Hasan - Abstract-333", email = "basharhasan74@gmail.com" },
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.112.0",
    "motor<4.0.0,>=3.5.1",
    "uvicorn<1.0.0,>=0.30.6",
    "pytest<9.0.0,>=8.3.2",
    "pytest-asyncio<1.0.0,>=0.24.0",
    "faker<29.0.0,>=28.0.0",
    "punq<1.0.0,>=0.7.0",
    "httpx<1.0.0,>=0.27.2",
    "poetry-plugin-export<2.0.0,>=1.8.0",
]
name = "ddd-fastapi"
version = "0.1.0"
description = ""
readme = "README.md"

[tool.uv]
dev-dependencies = [
    "black<25.0.0,>=24.10.0",
    "isort<6.0.0,>=5.13.2",
    "mypy<2.0.0,>=1.13.0",
    "pre-commit<5.0.0,>=4.0.1",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
force_grid_wrap = 2
src_paths = ["app", ]
skip_glob = [
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    ".github",
]
known_fastapi = ["fastapi"]
known_first_party = ["application", "domain", "events", "infra", "logic", "utils", "tests"]
sections = [
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
